--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
   "dependencies": {
-    "gatsby": "^2.13.73",
+    "gatsby": "^2.14.0",
+    "gatsby-plugin-sass": "^2.1.12",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
